kubernetes/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bind

---
apiVersion: v1
kind: Service
metadata:
  name: bind
  namespace: bind
  labels:
    app: bind
spec:
  selector:
    app: bind
  ports:
    - protocol: TCP
      port: 53
      targetPort: 53
      name: dns-tcp
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns-udp

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: bind-tcp
  namespace: bind
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - dns-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: bind
          port: 53

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bind
  namespace: bind
spec:
  selector:
    matchLabels:
      app: bind
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: bind
    spec:
      restartPolicy: Always
      containers:
        - name: bind
          image: aessing/bind:1.0.0
          resources:
            requests:
              memory: 16Mi
              cpu: 0.1
            limits:
              memory: 64Mi
              cpu: 1
          ports:
            - containerPort: 53
              protocol: TCP
              name: dns-tcp
            - containerPort: 53
              protocol: UDP
              name: dns-udp
          volumeMounts:
            - name: bind-config
              mountPath: /etc/bind/named.conf
              subPath: named.conf
              readOnly: true
            - name: bind-zones
              mountPath: /var/lib/bind/zones
              readOnly: true
      volumes:
        - name: bind-config
          configMap:
            name: bind-config
        - name: bind-zones
          configMap:
            name: bind-zones
